--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "@angular/platform-server": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.2",
+    "@zxing/library": "^0.20.0",
     "express": "^5.1.0",
     "firebase": "^12.8.0",
-    "html5-qrcode": "^2.3.8",
-    "qrcode-generator": "^2.0.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
