Update LMS project

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:LMS": "node dist/LMS/server/server.mjs"
+    "serve:ssr:LMS": "node dist/LMS/server/server.mjs",
+    "json-server": "json-server --watch db.json --port 3000"
   },
   "prettier": {
     "printWidth": 100,
@@ -33,10 +34,15 @@
     "@angular/platform-server": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.2",
+    "@primeuix/themes": "^2.0.3",
     "@zxing/library": "^0.20.0",
     "express": "^5.1.0",
     "firebase": "^12.8.0",
+    "json-server": "^1.0.0-beta.9",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.1.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.20",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
